Classification using built-->[Zong_Village] non-built-->[Verifie 2017-2019]

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        " '2017_2019']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sample_option_1: Using Verified_2017_2019 as invarient non-built\n",
+    "# _______________  Using Village_1990_1992  as invarient built    __________________________________\n",
+    "\n",
     "# Sample points serves as INVARIENT points\n",
     "Invarient_non_built = [ee.FeatureCollection('''users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019''')\\\n",
     "                        .filterMetadata('Built','equals',0)] *  num_invarient\n",
@@ -191,6 +194,8 @@
     "                         *  num_invarient\n",
     "\n",
     "\n",
+    "# Sample_option_2: Using each year's Verified_points of 2005-2019 as Each_year non-built\n",
+    "# _______________  Using Zone_polygon_to_points of 1990-1992 as Each_year built   __________________________________\n",
     "\n",
     "# Sample points serves as EACH_YEAR points\n",
     "# NOTE: Each_year_visual_check has [9K non-built] and [`1K built]\n",
@@ -201,8 +206,36 @@
     "# which was create by polygon_city_rurul to raster\n",
     "# based on base map of 1990_1992\n",
     "Each_year_built        = [ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1990_1992/Zone_Sample\")]\\\n",
-    "                         *  num_invarient\n"
+    "                         *  num_invarient"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
