--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the years to be classified\n",
-    "year_name  = list([f'{span[0]}_{span[1]}' for span in zip(range(1990,2020,3),range(1992,2020,3)) ])[::-1]\n",
+    "year_name  = list([f'{span[0]}_{span[1]}' for span in zip(range(1990,2020,3),range(1992,2020,3)) ])\n",
     "\n",
     "# import north_china_plain boundary\n",
     "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
@@ -83,25 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['2017_2019',\n",
-       " '2014_2016',\n",
-       " '2011_2013',\n",
-       " '2008_2010',\n",
-       " '2005_2007',\n",
-       " '2002_2004',\n",
-       " '1999_2001',\n",
-       " '1996_1998',\n",
+       "['1990_1992',\n",
        " '1993_1995',\n",
-       " '1990_1992']"
+       " '1996_1998',\n",
+       " '1999_2001',\n",
+       " '2002_2004',\n",
+       " '2005_2007',\n",
+       " '2008_2010',\n",
+       " '2011_2013',\n",
+       " '2014_2016',\n",
+       " '2017_2019']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,9 +136,9 @@
     "\n",
     "# import Fourier img   \n",
     "Fourier_img = [ee.Image(f\"users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_{year}_harmonic_3\")\\\n",
-    "                 .clip(North_China_Plain)  for year in year_name[5:]] + \\\n",
+    "                 .clip(North_China_Plain)  for year in year_name[:5]] + \\\n",
     "              [ee.Image(f\"users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_{year}_harmonic_3\")\\\n",
-    "                 .clip(North_China_Plain)  for year in year_name[:5]] \n",
+    "                 .clip(North_China_Plain)  for year in year_name[5:]] \n",
     "\n",
     "# Import the Index-mean Img\n",
     "NDVI_img = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDVI\").rename('Mean_NDVI')  \n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,16 +179,18 @@
     "                                .filterMetadata('Built','equals',0) for year in year_name]\n",
     "Invarient_built_sample     = [ee.FeatureCollection(f'{path}/Invarient_built_{year}')\n",
     "                                for year in year_name]\n",
-    "Invarient_sample_merge     = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,Invarient_built_sample)]\n",
+    "Invarient_sample_merge     = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,\n",
+    "                                                            Invarient_built_sample)]\n",
     "\n",
     "\n",
     "\n",
     "# Option_2: Use the Each_year points\n",
     "Each_year_non_built_sample = [ee.FeatureCollection(f'{path}/Each_year_visual_check_{year}')\n",
-    "                                for year in year_name[:5]]\n",
+    "                                for year in year_name[5:]]\n",
     "Each_year_built_sample     = [ee.FeatureCollection(f'{path}/Each_year_built_{year}')\n",
-    "                                for year in year_name[:5]]\n",
-    "Each_year_sample_merge     = [i[0].merge(i[1]) for i in zip(Each_year_non_built_sample,Each_year_built_sample)]\n",
+    "                                for year in year_name[5:]]\n",
+    "Each_year_sample_merge     = [i[0].merge(i[1]) for i in zip(Each_year_non_built_sample,\n",
+    "                                                            Each_year_built_sample)]\n",
     "\n",
     "\n",
     "\n",
@@ -199,7 +201,8 @@
     "                                                      Invarient_built_sample)]\n",
     "# limit the Zone_invarient_built point to 8000\n",
     "Zone_invarient_built_limit = [i.randomColumn('x').limit(8000,'x') for i in Zone_invarient_built]\n",
-    "Zone_Invarient_merge = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,Zone_invarient_built_limit)]"
+    "Zone_Invarient_merge = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,\n",
+    "                                                      Zone_invarient_built_limit)]"
    ]
   },
   {
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,8 +229,8 @@
     "stack_name   = ['Invarient'] * len(Invarient_sample_merge) + \\\n",
     "               ['Each_year'] * len(Each_year_sample_merge) + \\\n",
     "               ['Zone_invarient'] * len(Zone_Invarient_merge)\n",
-    "stack_year   = year_name + year_name[:5] + year_name\n",
-    "stack_img    = Stack_img + Stack_img[:5] + Stack_img\n",
+    "stack_year   = year_name + year_name[5:] + year_name\n",
+    "stack_img    = Stack_img + Stack_img[5:] + Stack_img\n",
     "stack_sample = Invarient_sample_merge + Each_year_sample_merge + Zone_Invarient_merge\n",
     "\n",
     "# stack all ingredients together\n",
@@ -243,14 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,37 +308,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Invarient',\n",
-       "  '2005_2007',\n",
-       "  <ee.image.Image at 0x7fed1bbaea20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1bbae860>),\n",
-       " ('Invarient',\n",
-       "  '2002_2004',\n",
-       "  <ee.image.Image at 0x7fed1bba7668>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1ba420f0>),\n",
-       " ('Invarient',\n",
-       "  '1999_2001',\n",
-       "  <ee.image.Image at 0x7fed1ba4e208>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1ba4e630>)]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Classificatioin_result[4:7]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -387,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -423,84 +388,84 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2017_2019</td>\n",
+       "      <td>1990_1992</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2014_2016</td>\n",
+       "      <td>1993_1995</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2011_2013</td>\n",
+       "      <td>1996_1998</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2008_2010</td>\n",
+       "      <td>1999_2001</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2005_2007</td>\n",
+       "      <td>2002_2004</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>2002_2004</td>\n",
+       "      <td>2005_2007</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>1999_2001</td>\n",
+       "      <td>2008_2010</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>1996_1998</td>\n",
+       "      <td>2011_2013</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>1993_1995</td>\n",
+       "      <td>2014_2016</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Invarient</td>\n",
-       "      <td>1990_1992</td>\n",
+       "      <td>2017_2019</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Each_year</td>\n",
-       "      <td>2017_2019</td>\n",
+       "      <td>2005_2007</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Each_year</td>\n",
-       "      <td>2014_2016</td>\n",
+       "      <td>2008_2010</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
@@ -514,84 +479,84 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Each_year</td>\n",
-       "      <td>2008_2010</td>\n",
+       "      <td>2014_2016</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Each_year</td>\n",
-       "      <td>2005_2007</td>\n",
+       "      <td>2017_2019</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2017_2019</td>\n",
+       "      <td>1990_1992</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2014_2016</td>\n",
+       "      <td>1993_1995</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2011_2013</td>\n",
+       "      <td>1996_1998</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2008_2010</td>\n",
+       "      <td>1999_2001</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2005_2007</td>\n",
+       "      <td>2002_2004</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>2002_2004</td>\n",
+       "      <td>2005_2007</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>1999_2001</td>\n",
+       "      <td>2008_2010</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>1996_1998</td>\n",
+       "      <td>2011_2013</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>1993_1995</td>\n",
+       "      <td>2014_2016</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Zone_invarient</td>\n",
-       "      <td>1990_1992</td>\n",
+       "      <td>2017_2019</td>\n",
        "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
        "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
        "    </tr>\n",
@@ -601,31 +566,31 @@
       ],
       "text/plain": [
        "                 0          1  \\\n",
-       "0        Invarient  2017_2019   \n",
-       "1        Invarient  2014_2016   \n",
-       "2        Invarient  2011_2013   \n",
-       "3        Invarient  2008_2010   \n",
-       "4        Invarient  2005_2007   \n",
-       "5        Invarient  2002_2004   \n",
-       "6        Invarient  1999_2001   \n",
-       "7        Invarient  1996_1998   \n",
-       "8        Invarient  1993_1995   \n",
-       "9        Invarient  1990_1992   \n",
-       "10       Each_year  2017_2019   \n",
-       "11       Each_year  2014_2016   \n",
+       "0        Invarient  1990_1992   \n",
+       "1        Invarient  1993_1995   \n",
+       "2        Invarient  1996_1998   \n",
+       "3        Invarient  1999_2001   \n",
+       "4        Invarient  2002_2004   \n",
+       "5        Invarient  2005_2007   \n",
+       "6        Invarient  2008_2010   \n",
+       "7        Invarient  2011_2013   \n",
+       "8        Invarient  2014_2016   \n",
+       "9        Invarient  2017_2019   \n",
+       "10       Each_year  2005_2007   \n",
+       "11       Each_year  2008_2010   \n",
        "12       Each_year  2011_2013   \n",
-       "13       Each_year  2008_2010   \n",
-       "14       Each_year  2005_2007   \n",
-       "15  Zone_invarient  2017_2019   \n",
-       "16  Zone_invarient  2014_2016   \n",
-       "17  Zone_invarient  2011_2013   \n",
-       "18  Zone_invarient  2008_2010   \n",
-       "19  Zone_invarient  2005_2007   \n",
-       "20  Zone_invarient  2002_2004   \n",
-       "21  Zone_invarient  1999_2001   \n",
-       "22  Zone_invarient  1996_1998   \n",
-       "23  Zone_invarient  1993_1995   \n",
-       "24  Zone_invarient  1990_1992   \n",
+       "13       Each_year  2014_2016   \n",
+       "14       Each_year  2017_2019   \n",
+       "15  Zone_invarient  1990_1992   \n",
+       "16  Zone_invarient  1993_1995   \n",
+       "17  Zone_invarient  1996_1998   \n",
+       "18  Zone_invarient  1999_2001   \n",
+       "19  Zone_invarient  2002_2004   \n",
+       "20  Zone_invarient  2005_2007   \n",
+       "21  Zone_invarient  2008_2010   \n",
+       "22  Zone_invarient  2011_2013   \n",
+       "23  Zone_invarient  2014_2016   \n",
+       "24  Zone_invarient  2017_2019   \n",
        "\n",
        "                                                    2  \\\n",
        "0   ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
@@ -682,7 +647,7 @@
        "24  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,13 +659,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3b10bca686d4250ae71091048b50e0a",
+       "model_id": "adbea6b18a824dcfa132e6c505546702",
        "version_major": 2,
        "version_minor": 0
       },
@@ -714,9 +679,12 @@
    ],
    "source": [
     "Map = geemap.Map()\n",
-    "Map.addLayer(Classificatioin_result[0][2],{'min':0,'max':1}, 'Invarient 2017-2019')\n",
-    "Map.addLayer(Classificatioin_result[10][2],{'min':0,'max':1},'Each_year 2017-2019')\n",
-    "Map.addLayer(Classificatioin_result[15][2],{'min':0,'max':1},'Zone_invarient 2017-2019')\n",
+    "Map.addLayer(Classificatioin_result[15][2],{'min':0,'max':1}, 'Zone_invarient 1990_1992')\n",
+    "Map.addLayer(Classificatioin_result[17][2],{'min':0,'max':1}, 'Zone_invarient 1996_1998')\n",
+    "Map.addLayer(Classificatioin_result[19][2],{'min':0,'max':1}, 'Zone_invarient 2002_2004')\n",
+    "Map.addLayer(Classificatioin_result[21][2],{'min':0,'max':1}, 'Zone_invarient 2008_2010')\n",
+    "Map.addLayer(Classificatioin_result[24][2],{'min':0,'max':1}, 'Zone_invarient 2017_2019')\n",
+    "\n",
     "Map"
    ]
   },
