--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,59 +287,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Invarient',\n",
-       "  '2017_2019',\n",
-       "  <ee.image.Image at 0x25bd5defa20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5dd1160>),\n",
+       "  '1996_1998',\n",
+       "  <ee.image.Image at 0x7f385912dfd0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f385912c160>),\n",
        " ('Invarient',\n",
-       "  '2014_2016',\n",
-       "  <ee.image.Image at 0x25bd48344a8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5da05c0>),\n",
+       "  '1993_1995',\n",
+       "  <ee.image.Image at 0x7f3859135ee0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f3859132070>),\n",
        " ('Invarient',\n",
-       "  '2011_2013',\n",
-       "  <ee.image.Image at 0x25bd47b1240>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5dcd1d0>),\n",
-       " ('Invarient',\n",
-       "  '2008_2010',\n",
-       "  <ee.image.Image at 0x25bd5da0160>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5da0d30>)]"
+       "  '1990_1992',\n",
+       "  <ee.image.Image at 0x7f3859132a90>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f3859132be0>)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Classificatioin_result[:4]"
+    "Classificatioin_result[7:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_2017_2019 successful!\n",
-      "Exporting Invarient_2014_2016 successful!\n",
-      "Exporting Invarient_2011_2013 successful!\n",
-      "Exporting Invarient_2008_2010 successful!\n"
+      "Exporting Invarient_1996_1998 successful!\n",
+      "Exporting Invarient_1993_1995 successful!\n",
+      "Exporting Invarient_1990_1992 successful!\n"
      ]
     }
    ],
    "source": [
-    "for item in Classificatioin_result[:4]:\n",
+    "for item in Classificatioin_result[7:10]:\n",
     "    \n",
-    "    asset_path = 'users/wangjinzhulala/North_China_Plain_Python/classification_img'\n",
+    "    asset_path = 'users/wang8052664/North_China_Plain/Classified_img'\n",
     "    \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
@@ -349,7 +344,7 @@
     "    \n",
     "    task = ee.batch.Export.image.toAsset(   image        = img,\n",
     "                                            description  = export_name,\n",
-    "                                            assetId      = f'{asset_path}/export_name',\n",
+    "                                            assetId      = f'{asset_path}/{export_name}',\n",
     "                                            region       = North_China_Plain.geometry().bounds(),\n",
     "                                            scale        = 30,\n",
     "                                            maxPixels    = int(1e13))\n",
@@ -473,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
