Restore Acc_band_combination jupyter

--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " '2017_2019']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,23 +308,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_2005_2007 successful!\n",
+      "Exporting Invarient_1990_1992 successful!\n",
+      "Exporting Invarient_1993_1995 successful!\n",
+      "Exporting Invarient_1996_1998 successful!\n",
+      "Exporting Invarient_1999_2001 successful!\n",
       "Exporting Invarient_2002_2004 successful!\n",
-      "Exporting Invarient_1999_2001 successful!\n"
+      "Exporting Invarient_2005_2007 successful!\n",
+      "Exporting Invarient_2008_2010 successful!\n",
+      "Exporting Invarient_2011_2013 successful!\n",
+      "Exporting Invarient_2014_2016 successful!\n",
+      "Exporting Invarient_2017_2019 successful!\n",
+      "Exporting Each_year_2005_2007 successful!\n",
+      "Exporting Each_year_2008_2010 successful!\n",
+      "Exporting Each_year_2011_2013 successful!\n",
+      "Exporting Each_year_2014_2016 successful!\n",
+      "Exporting Each_year_2017_2019 successful!\n",
+      "Exporting Zone_invarient_1990_1992 successful!\n",
+      "Exporting Zone_invarient_1993_1995 successful!\n",
+      "Exporting Zone_invarient_1996_1998 successful!\n",
+      "Exporting Zone_invarient_1999_2001 successful!\n",
+      "Exporting Zone_invarient_2002_2004 successful!\n",
+      "Exporting Zone_invarient_2005_2007 successful!\n",
+      "Exporting Zone_invarient_2008_2010 successful!\n",
+      "Exporting Zone_invarient_2011_2013 successful!\n",
+      "Exporting Zone_invarient_2014_2016 successful!\n",
+      "Exporting Zone_invarient_2017_2019 successful!\n"
      ]
     }
    ],
    "source": [
-    "for item in Classificatioin_result[4:7]:\n",
+    "for item in Classificatioin_result:\n",
     "    \n",
-    "    asset_path = 'users/Jinzhu_Deakin/North_China_Plain/Classified_img'\n",
+    "    asset_path = 'users/wangjinzhulala/North_China_Plain_Python/classification_img'\n",
     "    \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
@@ -332,12 +354,14 @@
     "    \n",
     "    export_name = f'{Classification_type}_{year}'\n",
     "    \n",
-    "    task = ee.batch.Export.image.toAsset(   image        = img,\n",
-    "                                            description  = export_name,\n",
-    "                                            assetId      = f'{asset_path}/{export_name}',\n",
-    "                                            region       = North_China_Plain.geometry().bounds(),\n",
-    "                                            scale        = 30,\n",
-    "                                            maxPixels    = int(1e13))\n",
+    "    task = ee.batch.Export.image.toCloudStorage(image          = img,\n",
+    "                                                description    = export_name,\n",
+    "                                                bucket         = 'north_china_plain',\n",
+    "                                                fileNamePrefix = export_name,\n",
+    "                                                region         = North_China_Plain.geometry().bounds(),\n",
+    "                                                scale          = 30,\n",
+    "                                                maxPixels      = int(1e13),\n",
+    "                                                skipEmptyTiles = True)\n",
     "    task.start()\n",
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
@@ -352,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -647,7 +671,7 @@
        "24  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,10 +728,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Zone_invarient',\n",
+       "  '1990_1992',\n",
+       "  <ee.image.Image at 0x26dc3c99f60>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x26dc3ca6518>),\n",
+       " ('Zone_invarient',\n",
+       "  '1993_1995',\n",
+       "  <ee.image.Image at 0x26dc3c829b0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x26dc3cb59e8>),\n",
+       " ('Zone_invarient',\n",
+       "  '1996_1998',\n",
+       "  <ee.image.Image at 0x26dc3c9b780>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x26dc3cb8438>),\n",
+       " ('Zone_invarient',\n",
+       "  '1999_2001',\n",
+       "  <ee.image.Image at 0x26dc3ca6dd8>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x26dc3cbd908>)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Classificatioin_result[15:19]"
+   ]
   },
   {
    "cell_type": "code",
@@ -782,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
