Add randome-10-layer classification

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_2_Classify_Fourier_Img.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_2_Classify_Fourier_Img.ipynb
@@ -122,6 +122,7 @@
     "                      Input_img     = None,\n",
     "                      Input_band    = None,\n",
     "                      Tree_num      = 100,\n",
+    "                      seed          = 101,\n",
     "                      Zone_sample   = None,\n",
     "                      classProperty = 'Built'):\n",
     "        \n",
@@ -138,9 +139,9 @@
     "\n",
     "        # 70/30 Train/Test split on built/non-built points.\n",
     "        Verified_built_pts_randomcolumn     = Verified_point_Built\\\n",
-    "                                              .randomColumn(columnName = 'random',seed = 101) \n",
+    "                                              .randomColumn(columnName = 'random',seed = seed) \n",
     "        Verified_non_built_pts_randomcolumn = Verified_point_non_Built\\\n",
-    "                                              .randomColumn(columnName = 'random',seed = 101)\n",
+    "                                              .randomColumn(columnName = 'random',seed = seed)\n",
     "\n",
     "\n",
     "        Vetified_built_pts_train     = Verified_built_pts_randomcolumn\\\n",
