--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_&_Cloud_Free_img.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_&_Cloud_Free_img.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step_1_Determine the best Harmonic number"
+    "### Step_1_Create_the_Fourier_Img"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
